facet-typescript/src/snapshots/facet_typescript__tests__chrono_naive_date.snap
---
source: facet-typescript/src/lib.rs
expression: ts
---
export interface WithChronoDate {
  birthday: string;
}
