facet-typescript/src/snapshots/facet_typescript__tests__enum_rename_all_snake_case.snap
---
source: facet-typescript/src/lib.rs
expression: ts
---
export type ValidationErrorCode = "circular_dependency" | "invalid_naming" | "unknown_requirement";
