facet-typescript/src/snapshots/facet_typescript__tests__enum_rename_individual.snap
---
source: facet-typescript/src/lib.rs
expression: ts
---
export type GitStatus = "dirty" | "staged" | "clean";
