facet-typescript/src/snapshots/facet_typescript__tests__enum_variant_flatten.snap
---
source: facet-typescript/src/lib.rs
expression: ts
---
export type Document =
  | { Article: { title: string; author: string; version: number } };
