facet-typescript/src/snapshots/facet_typescript__tests__enum_variant_skipped_field.snap
---
source: facet-typescript/src/lib.rs
expression: ts
---
export type Event =
  | { Data: { visible: string } };
