facet-typescript/src/snapshots/facet_typescript__tests__enum_with_data_rename_all.snap
---
source: facet-typescript/src/lib.rs
expression: ts
---
export type Message =
  | { text_message: { content: string } }
  | { image_upload: { url: string; width: number } };
