facet-typescript/src/snapshots/facet_typescript__tests__enum_with_proxy_enum.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 776
expression: ts
---
export type Status = "Active" | "Inactive";
