facet-typescript/src/snapshots/facet_typescript__tests__enum_with_proxy_struct.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 735
expression: ts
---
export type Shape = { center: Point; radius: number } | [Point, Point];

export interface Point {
  x: number;
  y: number;
}
