facet-typescript/src/snapshots/facet_typescript__tests__enum_with_tuple_struct_variant.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 683
expression: ts
---
export type Shape =
  | { Line: [Point, Point] };

export interface Point {
  x: number;
  y: number;
}
