facet-typescript/src/snapshots/facet_typescript__tests__enum_with_tuple_variant.snap
---
source: facet-typescript/src/lib.rs
expression: ts
---
export type Event =
  | { Click: { x: number; y: number } }
  | { Move: [number, number] }
  | { Resize: { dimensions: [number, number] } };
