facet-typescript/src/snapshots/facet_typescript__tests__flatten_arc.snap
---
source: facet-typescript/src/lib.rs
assertion_line: 995
expression: ts_arc
---
export interface FlattenArc {
  name: string;
  x: number;
  y: number;
}
