facet-typescript/src/snapshots/facet_typescript__tests__flatten_box.snap
---
source: facet-typescript/src/lib.rs
expression: ts_box
---
export interface FlattenBox {
  name: string;
  x: number;
  y: number;
}
